Lots of small cleanup

--- a/tests/integration/scenarios_declarative/test_data/embeds/late/test_ac_chain_jsonpath_grep_head.yaml
+++ b/tests/integration/scenarios_declarative/test_data/embeds/late/test_ac_chain_jsonpath_grep_head.yaml
@@ -16,4 +16,4 @@ expected_gateway_output:
   - type: "final_response"
     content_parts:
       - type: "text"
-        text_contains: 'Result: ["INFO: Start","WARN: Issue A","ERROR: Fail X","INFO: Mid","ERROR: Fail Y"]'
+        text_contains: 'Result: ERROR: Fail X'
