--- a/tests/integration/scenarios_declarative/test_data/embeds/late/test_ac_jsonpath_simple.yaml
+++ b/tests/integration/scenarios_declarative/test_data/embeds/late/test_ac_jsonpath_simple.yaml
@@ -16,4 +16,4 @@ expected_gateway_output:
   - type: "final_response"
     content_parts:
       - type: "text"
-        text_contains: 'Result: ["value"]'
+        text_contains: 'Result: value'
