--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -188,5 +188,14 @@
                 "PYTHONPATH": "${workspaceFolder}"
             }
         },
+        {
+            "name": "Fictional Agents",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "solace_ai_connector.main",
+            "console": "integratedTerminal",
+            "args": "--envfile .env examples/a2a_orchestrator.yaml examples/webui_backend.yaml examples/agent_mary.yaml examples/agent_bob.yaml examples/agent_phil.yaml examples/agent_judy.yaml",
+            "justMyCode": false,
+        },
     ]
 }
