--- a/samples/core/configs/agents/main_orchestrator.yaml
+++ b/samples/core/configs/agents/main_orchestrator.yaml
@@ -39,7 +39,7 @@ apps:
       inject_user_profile: true
       session_service: *default_session_service
       artifact_service: *default_artifact_service
-      artifact_handling_mode: "embed" 
+      artifact_handling_mode: "reference" 
       enable_embed_resolution: true 
       enable_artifact_content_instruction: true 
       data_tools_config: *default_data_tools_config
