--- a/tests/integration/scenarios_declarative/test_data/builtin_artifact_tools/apply_embed_and_create_artifact/test_apply_embed_with_output_metadata.yaml
+++ b/tests/integration/scenarios_declarative/test_data/builtin_artifact_tools/apply_embed_and_create_artifact/test_apply_embed_with_output_metadata.yaml
@@ -38,7 +38,7 @@ llm_interactions:
                 type: "function"
                 function:
                   name: "apply_embed_and_create_artifact"
-                  arguments: '{"output_filename": "output_with_meta.txt", "embed_directive": "«artifact_content:source_for_meta.txt»", "output_metadata": {"custom_key": "custom_value", "description": "Output with custom metadata"}}'
+                  arguments: '{"output_filename": "output_with_meta.txt", "embed_directive": "«artifact_content:source_for_meta.txt»", "output_metadata_json": "{\"custom_key\": \"custom_value\", \"description\": \"Output with custom metadata\"}"}'
           finish_reason: "tool_calls"
 
   # Step 2: LLM receives tool result and formulates final response
