--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ permissions:
 
 jobs:
   ci:
-    uses: SolaceDev/solace-public-workflows/.github/workflows/hatch_ci.yml@e98d4f12ca86d9d4d9833340e55329a360b6e4b0
+    uses: SolaceDev/solace-public-workflows/.github/workflows/hatch_ci.yml@debug
     with:
       min-python-version: "3.10"
       max-python-version: "3.13"
