feat(DATAGO-106092): Test UI release (#226)
* Fix UI issues

* Rename actions

* fix

* Fix UI run

* Use correct whitesource PR name

* Relax condition

--- a/.github/workflows/ui-release.yml
+++ b/.github/workflows/ui-release.yml
@@ -1,4 +1,4 @@
-name: "Release UI Package to GitHub Packages"
+name: "Release UI"
 
 on:
   workflow_dispatch:
@@ -7,9 +7,6 @@ on:
         description: "UI tag to release (e.g., ui-v1.0.0)"
         required: true
         type: string
-  push:
-    tags:
-      - "ui-v*"
 
 permissions:
   contents: write
