--- a/.github/workflows/ui-ci.yml
+++ b/.github/workflows/ui-ci.yml
@@ -1,4 +1,4 @@
-name: "UI CI"
+name: "CI (UI)"
 
 on:
   workflow_dispatch:
@@ -55,11 +55,11 @@ jobs:
           requireScope: false
           disallowScopes: |
             release
-          subjectPattern: ^(?![A-Z]).+$
+          subjectPattern: ^.+$
           subjectPatternError: |
             The subject "{subject}" found in the pull request title "{title}"
             didn't match the configured pattern. Please ensure that the subject
-            doesn't start with an uppercase character.
+            is not empty.
 
   ui-build-and-test:
     name: "Build and Test UI"
@@ -106,23 +106,23 @@ jobs:
         with:
           whitesource_api_key: ${{ secrets.WHITESOURCE_API_KEY }}
           whitesource_product_name: "solaceai"
-          whitesource_project_name: "solace-agent-mesh-ui"
+          whitesource_project_name: "solace-agent-mesh-ui${{ github.event_name == 'push' && '' || github.event_name == 'pull_request' && format('-pr-{0}', github.event.pull_request.number) || '' }}"
           whitesource_config_file: "client/webui/frontend/wss-unified-agent.config"
           target_directory: "client/webui/frontend"
 
       - name: Run WhiteSource PR Checker (Policy Violations)
         id: whitesource-pr-policy-violation-checker
         if: github.event_name == 'pull_request'
-        uses: docker://ghcr.io/SolaceLabs/maas-build-actions:latest
+        uses: docker://ghcr.io/solacedev/maas-build-actions:latest
         continue-on-error: true
         env:
           WS_API_KEY: ${{ secrets.WHITESOURCE_API_KEY }}
           WS_PRODUCT_NAME: "solaceai"
           WS_PROJECT_NAME: "solace-agent-mesh-ui-pr-${{ github.event.pull_request.number }}"
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          AWS_REGION: ${{ secrets.MANIFEST_AWS_REGION }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.MANIFEST_AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.MANIFEST_AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.SAM_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.SAM_AWS_SECRET_ACCESS_KEY }}
           WS_BLOCKING_POLICY_VIOLATION_LEVELS: "Major,Minor"
           FAIL_IF_POLICY_VIOLATIONS_FOUND: "True"
           GH_ORG: ${{ github.repository_owner }}
@@ -142,17 +142,17 @@ jobs:
 
       - name: Run WhiteSource Policy Gate
         id: whitesource-policy-gate
-        if: fromJson(env.is_push) && fromJson(env.has_whitesource_config)
-        uses: docker://ghcr.io/SolaceLabs/maas-build-actions:latest
+        if: github.event_name == 'push' && github.ref == 'refs/heads/test-ui-base'
+        uses: docker://ghcr.io/solacedev/maas-build-actions:latest
         continue-on-error: true
         env:
           WS_API_KEY: ${{ secrets.WHITESOURCE_API_KEY }}
           WS_PRODUCT_NAME: "solaceai"
           WS_PROJECT_NAME: "solace-agent-mesh-ui"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.MANIFEST_AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.MANIFEST_AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.DEFAULT_AWS_REGION }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.SAM_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.SAM_AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
           WS_BLOCKING_POLICY_VIOLATION_LEVELS: "Major,Minor"
           FAIL_IF_POLICY_VIOLATIONS_FOUND: "True"
           STATUS_CHECK: "True"
@@ -171,16 +171,16 @@ jobs:
 
       - name: Run WhiteSource Vulnerability Checker
         id: whitesource-vulnerability-checker
-        if: github.event_name != 'pull_request'
-        uses: docker://ghcr.io/SolaceLabs/maas-build-actions:latest
+        if: github.event_name == 'push' && github.ref == 'refs/heads/test-ui-base'
+        uses: docker://ghcr.io/solacedev/maas-build-actions:latest
         continue-on-error: true
         env:
           WS_API_KEY: ${{ secrets.WHITESOURCE_API_KEY }}
           WS_PRODUCT_NAME: "solaceai"
           WS_PROJECT_NAME: "solace-agent-mesh-ui"
-          AWS_ACCESS_KEY_ID: ${{ secrets.MANIFEST_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.MANIFEST_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.DEFAULT_AWS_REGION }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.SAM_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.SAM_AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
           WS_JIRA_CHECK: "True"
           JIRA_ONLY: "True"
           STATUS_CHECK: "True"
@@ -202,6 +202,9 @@ jobs:
     name: "Bump UI Version"
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/test-ui-base'
+    outputs:
+      new-tag: ${{ steps.bump.outputs.newTag }}
+      new-version: ${{ steps.extract-version.outputs.version }}
     defaults:
       run:
         working-directory: client/webui/frontend
@@ -231,11 +234,27 @@ jobs:
           tag-prefix: "ui-v"
           commit-message: "ci(ui): bump version to {{version}} [skip ci]"
           skip-push: "true"
+          default: "patch" # default to patch bump if no bumps included in commit messages
+          bump-policy: "ignore" # always bump regardless of whether bumps included in commit messages
         env:
+          PACKAGEJSON_DIR: client/webui/frontend
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: "Updated package.json"
         run: cat ./package.json
+
+      - name: "Extract version from tag"
+        id: extract-version
+        run: |
+          if [ -n "${{ steps.bump.outputs.newTag }}" ]; then
+            TAG="${{ steps.bump.outputs.newTag }}"
+            VERSION="${TAG#ui-v}"
+            echo "version=$VERSION" >> $GITHUB_OUTPUT
+            echo "Extracted version: $VERSION from tag: $TAG"
+          else
+            echo "No new tag created"
+            echo "version=" >> $GITHUB_OUTPUT
+          fi
 
       - name: Set up SSH agent
         if: steps.bump.outputs.newTag != ''
@@ -251,3 +270,12 @@ jobs:
           git remote set-url origin git@github.com:${{ github.repository }}.git
           git push origin test-ui-base
           git push origin ${{ steps.bump.outputs.newTag }}
+
+  release-ui:
+    needs: bump-version
+    name: "Release UI Package"
+    if: needs.bump-version.outputs.new-tag != ''
+    uses: ./.github/workflows/ui-release.yml
+    with:
+      tag: ${{ needs.bump-version.outputs.new-tag }}
+    secrets: inherit
