--- a/.github/workflows/release-ui.yml
+++ b/.github/workflows/release-ui.yml
@@ -1,4 +1,4 @@
-name: "Release UI (GitHub Packages)"
+name: "Release UI"
 
 on:
   workflow_dispatch:
@@ -7,6 +7,9 @@ on:
         description: "UI tag to release (e.g., ui-v1.0.0)"
         required: true
         type: string
+  push:
+    tags:
+      - "ui-v*"
 
 permissions:
   contents: write
@@ -68,12 +71,12 @@ jobs:
           cache: "npm"
           cache-dependency-path: client/webui/frontend/package-lock.json
           registry-url: https://npm.pkg.github.com/
-          scope: "@SolaceDev"
+          scope: "@SolaceLabs"
 
       - name: Configure npm for install and publish
         run: |
           echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > .npmrc
-          echo "@SolaceDev:registry=https://npm.pkg.github.com/" >> .npmrc
+          echo "@SolaceLabs:registry=https://npm.pkg.github.com/" >> .npmrc
           echo "legacy-peer-deps=true" >> .npmrc
 
       - name: Install dependencies
@@ -98,12 +101,11 @@ jobs:
 
       - name: Update package.json for publishing
         run: |
-          # Update the package name to include the SolaceDev scope for publishing
           node -e "
           const pkg = require('./package.json');
-          pkg.name = '@SolaceDev/solace-agent-mesh-ui';
+          pkg.name = '@SolaceLabs/solace-agent-mesh-ui';
           pkg.publishConfig = {
-            registry: 'https://npm.pkg.github.com/SolaceDev'
+            registry: 'https://npm.pkg.github.com/SolaceLabs'
           };
           require('fs').writeFileSync('./package.json', JSON.stringify(pkg, null, 2));
           "
