--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,4 @@ markers =
     long_soak: marks tests as very long-running soak tests for memory leak detection
 addopts = -sv --log-cli-level=ERROR -p pytest_asyncio
 asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
