--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ dependencies = [
 [project.optional-dependencies]
 database = ["sqlalchemy>=2.0"]
 gcs = ["google-cloud-storage>=2.0"]
+s3 = ["boto3>=1.0"]
 vertex = ["google-cloud-aiplatform>=1.38"]
 employee_tools = ["holidays>=0.24"]
 cli = [
@@ -88,7 +89,7 @@ dependencies = [
     "pytest-httpx>=0.35.0"
 ]
 extra-dependencies = [
-    "solace-agent-mesh[database,cli,gcs,vertex,employee_tools]",
+    "solace-agent-mesh[database,cli,gcs,vertex,employee_tools,s3]",
     "sam-test-infrastructure @ {root:uri}/tests/sam-test-infrastructure"
 ]
 
