--- a/pyproject.toml
+++ b/pyproject.toml
@@ -122,6 +122,7 @@ quote-style = "double"
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "function"
 addopts = "--tb=short --strict-markers --disable-warnings -p pytest_asyncio"
+pythonpath = [".", "src", "tests/sam-test-infrastructure/src"]
 python_files = ["test_*.py", "*_test.py", "tests.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
