--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,17 +70,23 @@ cli = [
     "prompt-toolkit>=3.0",
     "rich>=13.0",
 ]
-dev = [
-    "pytest>=7.0",
-    "pytest-asyncio>=0.20",
-    "ruff",
-    "sam-test-infrastructure @ {root:uri}/tests/sam-test-infrastructure"
-]
+
 
 [tool.hatch.envs.hatch-test]
 parallel = false
 installer = "pip"
 dependencies = [
+[tool.hatch.envs.default]
+installer = "pip"
+dependencies = [
+    "pytest>=7.0",
+    "pytest-asyncio>=0.20",
+    "ruff",
+]
+extra-dependencies = [
+    "solace-agent-mesh[database,cli,gcs,vertex,employee_tools]",
+    "sam-test-infrastructure @ {root:uri}/tests/sam-test-infrastructure"
+]
     "pytest_asyncio",
     "pytest>=8.0.0",
     "pytest-mock>=3.0.0",
