Update llm.txt files and clean up a few other issues

--- a/tests/integration/scenarios_declarative/test_data/embeds/early/test_status_update_empty_message.yaml
+++ b/tests/integration/scenarios_declarative/test_data/embeds/early/test_status_update_empty_message.yaml
@@ -34,7 +34,7 @@ expected_gateway_output:
         messageId: '*'
         role: agent
     event_purpose: "llm_response"
-    final_flag: true
+    final_flag: false
   - type: "final_response"
     kind: task
     id: '*'
