--- a/tests/integration/scenarios_declarative/test_data/notifications/test_tool_invocation_notification.yaml
+++ b/tests/integration/scenarios_declarative/test_data/notifications/test_tool_invocation_notification.yaml
@@ -76,7 +76,7 @@ expected_gateway_output:
               name: "get_weather_tool"
               args:
                 location: "Paris"
-    final_flag: true
+    final_flag: false
   - type: "status_update"
     kind: task
     id: '*'
