--- a/tests/integration/scenarios_declarative/test_data/builtin_artifact_tools/signal_artifact_for_return/test_signal_artifact_for_return_binary.yaml
+++ b/tests/integration/scenarios_declarative/test_data/builtin_artifact_tools/signal_artifact_for_return/test_signal_artifact_for_return_binary.yaml
@@ -100,7 +100,7 @@ expected_gateway_output:
 
   - type: "status_update" # This is the llm_response event that finalizes the text stream
     event_purpose: "llm_response"
-    final_flag: true
+    final_flag: false
     expected_llm_data_contains: # The content of an llm_response event is in its metadata
       content:
         parts:
