--- a/tests/integration/scenarios_declarative/test_data/embeds/early/test_status_update_only_status_update.yaml
+++ b/tests/integration/scenarios_declarative/test_data/embeds/early/test_status_update_only_status_update.yaml
@@ -25,7 +25,7 @@ expected_gateway_output:
           - type: "text"
             text_contains:
               - "Task is actively being monitored."
-    event_purpose: "embedded_status_update"
+    event_purpose: "agent_progress_update"
     final_flag: false
   - type: "final_response"
     kind: task
