--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,8 @@ dependencies = [
     "itsdangerous>=2.0",
     "solace-ai-connector~=1.1.8",
     "holidays>=0.24",
-    "rouge~=1.0.1"
+    "rouge~=1.0.1",
+    "openai<1.100.0"
 ]
 
 [project.optional-dependencies]
