--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ dependencies = [
 [project.optional-dependencies]
 database = ["sqlalchemy>=2.0"]
 gcs = ["google-cloud-storage>=2.0"]
-s3 = ["boto3>=1.0"]
+s3 = ["boto3>=1.35.0,<2.0"]
 vertex = ["google-cloud-aiplatform>=1.38"]
 employee_tools = ["holidays>=0.24"]
 cli = [
