--- a/config_portal/frontend/package.json
+++ b/config_portal/frontend/package.json
@@ -16,7 +16,7 @@
     "isbot": "^4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0",
+    "react-feather": "^2.0.10",
     "react-markdown": "^10.1.0"
   },
   "devDependencies": {
